maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:15: error: expected class or object definition
def keepHandOnSideWall():Unit = {
^WallFindFollowMaze:47: error: Unmatched closing brace '}' ignored here
}
^